Fixed bug where the filter menu would be too wide for smaller screen sizes - now collapses at 1000px vw.

--- a/src/components/Rental/CarDisplay/CarDisplay.css
+++ b/src/components/Rental/CarDisplay/CarDisplay.css
@@ -161,7 +161,7 @@
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1000px) {
   .car-display.selected {
     outline: 0 solid;
   }
